<?xml version="1.0" encoding="utf-8"?>
<resources>

    //Main activity
    <string name="MainActivity_title">Stamford POS Application</string>
    <string name="MainActivity_username">Username</string>
    <string name="MainActivity_password">Password</string>
    <string name="MainActivity_rememberme">Remember me</string>
    <string name="MainActivity_login">Login</string>

    //Command Center Activity
    <string name="CommandCenterActivity_title">Command Center</string>
    <string name="CommandCenterActivity_neworder">New order</string>
    <string name="CommandCenterActivity_addproduct">Add product</string>
    <string name="CommandCenterActivity_playmusic">Play music in background</string>
    <string name="CommandCenterActivity_stopmusic">Stop music in background</string>

    //Setting Activity
    <string name="SettingActivity_title">Stamford POS Settings</string>
    <string name="SettingActivity_ordermanager">Order Manager</string>
    <string name="SettingActivity_setupbranch">Set up branch</string>
    <string name="SettingActivity_updatebranch">Update branch</string>
    <string name="SettingActivity_uisetting">Change UI settings</string>
    <string name="SettingActivity_uploaddailyreport">Upload daily report</string>
    <string name="SettingActivity_searchcontact">Search Contact</string>
    <string name="SettingActivity_submitorder">Submit order to remote server</string>
    <string name="SettingActivity_retrieveorder">Retrieve order from remote server</string>
    <string name="SettingActivity_uploadimage">Upload image to server</string>

    //Category Activity
    <string name="CategoryActivity_title">Product Category</string>
    <string name="CategoryActivity_drink">Drinks</string>
    <string name="CategoryActivity_pasta">Pasta</string>
    <string name="CategoryActivity_pizza">Pizza</string>
    <string name="CategoryActivity_fruit">Fruit</string>
    <string name="CategoryActivity_macaron">Macaron</string>
    <string name="CategoryActivity_icecream">Ice-cream</string>

    //Edit Orderline Activity
    <string name="EditOrderlineActivity_title">Change Order Details</string>
    <string name="EditOrderlineActivity_quantity">Product Quantity</string>
    <string name="EditOrderlineActivity_price">Product Price</string>
    <string name="EditOrderlineActivity_confirm">Confirm</string>

    //Order Activity
    <string name="OrderActivity_branchid">Branch ID:</string>
    <string name="OrderActivity_staffid">Staff ID:</string>
    <string name="OrderActivity_totalamount">Total Amount:</string>
    <string name="OrderActivity_submitorder">Submit order</string>
    <string name="OrderActivity_retrieveorder">Retrieve order</string>

    //Order Fragment
    <string name="FragmentOrder_orderid">Order ID</string>
    <string name="FragmentOrder_staffid">Staff ID</string>
    <string name="FragmentOrder_branchid">Branch ID</string>

    //Orderline Fragment
    <string name="FragmentOrderline_orderlineid">Orderline ID</string>
    <string name="FragmentOrderline_productid">Product ID</string>
    <string name="FragmentOrderline_productprice">Product Price</string>
    <string name="FragmentOrderline_productquantity">Product Quantity</string>

    //Show cart Fragment
    <string name="Fragmentshowcart_productname">Product name</string>
    <string name="Fragmentshowcart_price">Price</string>
    <string name="Fragmentshowcart_quantity">Quantity</string>

    //Search contact
    <string name="ListviewSearchContact_name">Name</string>
    <string name="ListviewSearchContact_number">Number</string>
    <string name="queryhint"> Enter the contact name here</string>



    //Common button
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    //Take picture
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="failed">Failed</string>
    <string name="uploadornot">Do you want to upload the picture?</string>
    <string name="phototaken">Photo taken</string>


    <string name="app_name">PoS2</string>
    <string name="style">themes</string>
    <string name="preference_file_key">com.stamford.pos2.secret_pref</string>
    <string name="credential_stored_key">credential_stored_key</string>
    <string name="username_key">username_key</string>
    <string name="password_key">password_key</string>
    <string name="keyBytes_key">pass_key</string>
    <string name="salt_key">salt_key</string>
    <string name="iv_key">iv_key</string>
    <string name="total_amount_str">%d</string> //for order activity totalamount textview
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_title">Stamford POS BG Music Status</string>
    <string name="play_str">Play</string>
    <string name="stop_str">Stop</string>
    <string name="music_status">%d</string>
</resources>