<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingconstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEAEA"
    tools:context=".SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="408dp"
        android:layout_height="735dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/settingleftlayout"
            android:layout_width="371dp"
            android:layout_height="583dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/OrderManagerBtn"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F19D9D"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_ordermanager" />

            <Button
                android:id="@+id/button"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F0BABA"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_setupbranch" />

            <Button
                android:id="@+id/button3"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F19D9D"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_updatebranch" />

            <Button
                android:id="@+id/button4"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#E46F6F"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_uisetting" />

            <Button
                android:id="@+id/DailyReportBtn"
                android:layout_width="219dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F0BABA"
                android:gravity="center"
                android:paddingTop="4dp"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_uploaddailyreport" />

            <Button
                android:id="@+id/SearchContactBtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F19D9D"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_searchcontact" />

            <Button
                android:id="@+id/submitLocalOrdersBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F19D9D"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_submitorder"
                android:textSize="10sp" />

            <Button
                android:id="@+id/retrieveLocalOrdersBtn"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:backgroundTint="#F0BABA"
                android:gravity="center"
                android:shadowColor="#A64B4B"
                android:shadowDx="0.5"
                android:shadowDy="0.5"
                android:shadowRadius="1"
                android:text="@string/SettingActivity_retrieveorder"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagelayout"
            android:layout_width="394dp"
            android:layout_height="146dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.904"></LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:shadowColor="#FFFFFF"
            android:shadowDx="1.3"
            android:shadowDy="1.3"
            android:shadowRadius="1.1"
            android:text="@string/SettingActivity_title"
            android:textAlignment="center"
            android:textColor="#8C4EF2"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.165" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>