<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/FragmentOrder_orderid"
            android:textColor="#536BED"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60px"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/FragmentOrder_staffid"
            android:textColor="#536BED"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70px"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/FragmentOrder_branchid"
            android:textColor="#536BED"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>